Mon Jul 27 19:03:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_*str_new_cstr, rb_str_buf_new_cstr),
	  (rb_str_buf_cat2, rb_str_cat2, rb_exc_new2): suppress warnings.

Mon Jul 27 10:24:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parser.rb (RDoc::Parser.binary?): fix for empty files.
	  [ruby-dev:38848]

Sun Jul 26 19:17:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_eof): go to the next file if called after ARGF.close
	  or ARGF.skip.  a patch from Mike Kasick at [ruby-core:24561].

Sun Jul 26 18:30:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): __send__ can call protected
	  methods.  [ruby-core:24500]

Sun Jul 26 01:09:14 2009  Alexander Zavorine  <alexandre.zavorine@nokia.com>

	* ext/bigdecimal.c: moved BASE_FIG definition before it is used
	  first time.

	* include/ruby/defines.h [__SYMBIAN32__]: defined TRUE and FALSE to match
	  changes in bignum.c and array.c.

Sat Jul 25 17:49:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_eof): should not have reached EOF before trying to
	  read.  based on a patch by Heesob Park <phasis AT gmail.com> a
	  [ruby-core:24559].  [ruby-core:24557]

Sat Jul 25 13:44:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (nucomp_hash), rational.c (nurat_hash): not to use
	  hash value of class so that equality against subclasses can
	  work.  [ruby-dev:38850]

Sat Jul 25 01:05:59 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/big5.c: Fix EncLen_BIG5 for Big5-HKSCS. see [ruby-core:24390]

Fri Jul 24 19:19:19 2009  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/trans/big5.trans, big5-hkscs-tbl.rb:
	  new Chinese BIG5-HKSCS transcoding (with Tatsuya Mizuno)
	  see [ruby-core:24390]

	* test/ruby/test_transcode.rb: added tests for the above
	  (with Tatsuya Mizuno)

	* enc/big5.c: Added BIG5-HKSCS as a replicate encoding of BIG5
	  (short term solution, needs more work; with Tatsuya Mizuno)
